[tool.poetry]
name = "irt-notebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "=3.8"
jupyter = "^1.0.0"
numpy = "^1.21.1"
scipy = "^1.7.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
